Updated Work Field

--- a/index.html
+++ b/index.html
@@ -39,11 +39,11 @@
       <tbody>
         <tr>
           <td>2019</td>
-          <td>lulz</td>
+          <td>Student</td>
         </tr>
         <tr>
           <td>2020</td>
-          <td>lol</td>
+          <td>Chill Student</td>
         </tr>
       </tbody>
       <tfoot></tfoot>
